# NUpad

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml  install-build-dependencies.sh  install-dependencies.sh
.github/workflows/: unittest.yml
app/: CMakeLists.txt  app_server.cpp  app_server.h  app_websocket.cpp  app_websocket.h  main.cpp
cmake/: Findgflags.cmake  Findglog.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
crdt/: CMakeLists.txt
crdt/src/: clock.cpp
crdt/test/: crdt_unit_tests.cpp
crdt_lib/: CMakeLists.txt
crdt_lib/include/: clock.h  context.h  crdt_list.h  document.h  list.h  operation.h  types.h
crdt_lib/src/: clock.cpp  context.cpp  document.cpp  list.cpp  operation.cpp
crdt_lib/test/: context_test.cpp  crdt_list_test.cpp  document_test.cpp  element_id_test.cpp  id_test.cpp  list_test.cpp  run_all_tests.cpp  test_utils.cpp  test_utils.h  unit_tests.cpp  vector_clock_test.cpp
docs/: concurrent_operations_problem.xml  consensus.xml  google_docs_OT_example.xml  nupad_arch_overview.xml  nupad_delete_operation.xml  nupad_grpc_arch_overview.xml  nupad_insert_operation.xml  set_example.xml
proto/: CMakeLists.txt  common.proto  helloworld.proto  message.proto  test1.proto  test2.proto  ui.proto
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/crdt/include/: clock.h
src/server/: CMakeLists.txt
user_interface/vscode-nupad/: README.md  package.json
user_interface/vscode-nupad/src/: extension.ts
user_interface/web/: .eslintcache  CMakeLists.txt  nginx.conf  package.json
user_interface/web/public/: index.html  manifest.json
user_interface/web/src/: App.js
user_interface/web/src/components/: Collaborators.js  Document.js  TextArea.js  Title.js  UsernameDialog.js
